[package]
authors = ["Stefan Deml<stefandeml@gmail.com>"]
description = "Bellman scaling benchmarks"
license = "MIT/Apache-2.0"
name = "bellman-benchmarks"
version = "0.0.1"
edition = "2018"

[lib]
name = "benchmarks"
path = "src/lib.rs"

[dependencies]
pairing = { git = 'https://github.com/matterinc/pairing' }
bellman = { git = 'https://github.com/matterinc/bellman' }


